--- a/src/main/webapp/css/mystyle.css
+++ b/src/main/webapp/css/mystyle.css
@@ -23,6 +23,18 @@
 
 .my-margin-2{margin:2px}
 
+
+.my-left-aside {
+    width: 276px;
+    min-width: 276px
+}
+.my-right-main {
+    width: 100%;
+    min-width: 800px
+}
+
+
+#TODO
 .my-left {
     width: 79%;
     min-width: 800px
@@ -31,6 +43,11 @@
 .my-right {
     width: 21%;
     min-width: 212px
+}
+
+.my-test-area {
+    width: 100%;
+    height: 150px;
 }
 
 .firstColumnWidth {
@@ -103,22 +120,18 @@
     font-family:Arial, sans-serif;
     font-size:14px;
     padding:10px 5px;
-    border-style:solid;
-    border-width:1px;
     overflow:hidden;
     word-break:normal;
-    border-color:black
+    border: 0 black;
 }
 .tg2 th {
     font-family:Arial, sans-serif;
     font-size:14px;
     font-weight:normal;
     padding:10px 5px;
-    border-style:solid;
-    border-width:1px;
-    overflow:hidden;
+    verflow:hidden;
     word-break:normal;
-    border-color:black
+    border: 0 black;
 }
 .tg2 .tg2-0lax {
     text-align:left;
@@ -209,8 +222,8 @@ aside {
 aside ul {
     display: block;
     list-style: none;
-    margin: 0 0 0 15px;
-    padding: 0 15px
+    margin: 0 0 0 5px;
+    padding: 0 5px
 }
 
 .news {
@@ -230,6 +243,7 @@ aside ul {
     font-size: 14px;
     font-weight: bold;
     text-decoration: none
+
 }
 
 aside ul li {
