--- a/src/main/webapp/css/mystyle.css
+++ b/src/main/webapp/css/mystyle.css
@@ -1,6 +1,6 @@
 /*
  * mystyle.css
- * This file was last modified at 2019-02-09 23:54 by Victor N. Skurikhin.
+ * This file was last modified at 2019-02-11 23:05 by Victor N. Skurikhin.
  * $Id$
  * This is free and unencumbered software released into the public domain.
  * For more information, please refer to <http://unlicense.org>
@@ -265,7 +265,9 @@ aside ul {
     display: block;
     list-style: none;
     margin: 0 0 0 5px;
-    padding: 0 5px
+    padding: 0 5px;
+    font-family: Lucida Sans,Arial,Helvetica,sans-serif;
+    font-size: 15pt;
 }
 
 .news {
