--- a/src/main/webapp/css/mystyle.css
+++ b/src/main/webapp/css/mystyle.css
@@ -1,6 +1,6 @@
 /*
  * mystyle.css
- * This file was last modified at 2019-02-11 23:05 by Victor N. Skurikhin.
+ * This file was last modified at 2019-02-16 21:25 by Victor N. Skurikhin.
  * $Id$
  * This is free and unencumbered software released into the public domain.
  * For more information, please refer to <http://unlicense.org>
@@ -33,8 +33,8 @@
 
 
 .my-left-aside {
-    width: 276px;
-    min-width: 276px
+    width: 224px;
+    min-width: 224px
 }
 .my-right-main {
     width: 100%;
@@ -189,6 +189,11 @@
     text-align:center;
     vertical-align:top
 }
+.tg2 .tg2-0pky {
+    border-color:inherit;
+    text-align:left;
+    vertical-align:top
+}
 
 html {
     height: 100%
@@ -197,7 +202,7 @@ html {
 .body {
     margin: 0 auto;
     min-width: 1024px;
-    width: 90%
+    width: 100%
 }
 
 .main-header {
